# GroveEngine

./: .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CLAUDE_NEXT_SESSION.md  CMakeLists.txt  LICENSE-COMMERCIAL  LICENSE-GPL  README.md  RUST_MIGRATION.md  build_renderer.bat  diagram_dev_workflow.html  diagram_iio_messaging.html  diagram_module_lifecycle.html  groveengine_architecture.html  groveengine_diagram.html  helgrind.supp  logger_demo  run_all_tests.sh  run_full_stack_demo.bat  test_atomic_barrier.cpp
modules/BgfxRenderer/: BgfxRendererModule.cpp  BgfxRendererModule.h  CMakeLists.txt  README.md
modules/DialogueModule/: CMakeLists.txt  DialogueModule.cpp  DialogueModule.h  DialogueRuntime.h
modules/EntityModule/: CMakeLists.txt  EntityModule.cpp  EntityModule.h
modules/InputModule/: ActionMap.h  CMakeLists.txt  InputModule.cpp  InputModule.h  README.md
modules/SoundManager/: AdaptiveMixer.h  BeatClock.h  CMakeLists.txt  ISoundBackend.h  SDLMixerBackend.cpp  SDLMixerBackend.h  SoundManagerModule.cpp  SoundManagerModule.h
modules/UIModule/: CMakeLists.txt  README.md  UIModule.cpp  UIModule.h
modules/VideoModule/: CMakeLists.txt  FfmpegCliBackend.cpp  FfmpegCliBackend.h  IVideoBackend.h  VideoModule.cpp  VideoModule.h  VideoSync.h
tests/: CMakeLists.txt  profile_memory_leak.cpp
tests/benchmarks/: benchmark_batching.cpp  benchmark_e2e.cpp  benchmark_helpers_demo.cpp  benchmark_iio_bigblob.cpp  benchmark_iio_direct.cpp  benchmark_iio_latency.cpp  benchmark_iio_zerocopy.cpp  benchmark_pool_vs_threaded.cpp  benchmark_readonly.cpp  benchmark_threaded_vs_sequential.cpp  benchmark_threaded_vs_sequential_cpu.cpp  benchmark_topictree.cpp
tests/demo/: demo_ui_showcase.cpp
tests/fixtures/: asset_manifest.json
tests/helpers/: AutoCompiler.cpp  AutoCompiler.h  CrashBacktrace.h  SystemUtils.cpp  SystemUtils.h  TestAssertions.h  TestMetrics.cpp  TestMetrics.h  TestReporter.cpp  TestReporter.h  WindowIcon.h
tests/hotreload/: FileWatcher.h  test_engine_hotreload.cpp  test_hotreload.cpp  test_hotreload_live.sh
tests/integration/: IT_014_ui_module_integration.cpp  IT_015_STATUS.md  IT_015_input_ui_integration.cpp  IT_015_input_ui_integration.cpp.backup  IT_015_input_ui_integration_minimal.cpp  IT_016_ui_click_assert.cpp  IT_017_ui_widgets_e2e.cpp  IT_018_ui_layout_hittest_e2e.cpp  IT_019_ui_scrollpanel_e2e.cpp  IT_020_threaded_query_race.cpp  IT_020_ui_radial_e2e.cpp  IT_021_ui_resize_reflow_e2e.cpp  IT_022_ui_anchor_reflow_e2e.cpp  IT_023_ui_grid_reflow_e2e.cpp  IT_024_ui_scrollpanel_clip_e2e.cpp  IT_025_ui_scrollpanel_hitclip_e2e.cpp  IT_026_ui_window_e2e.cpp  IT_027_ui_window_raise_e2e.cpp  IT_028_ui_window_dragclose_e2e.cpp  IT_029_ui_tabs_e2e.cpp  IT_030_ui_drawer_e2e.cpp  IT_031_ui_modal_e2e.cpp  IT_032_ui_window_resize_e2e.cpp  IT_033_ui_list_e2e.cpp  IT_034_ui_list_groups_e2e.cpp  IT_035_ui_list_dragscroll_e2e.cpp  IT_036_ui_capture_e2e.cpp  IT_037_ui_binding_e2e.cpp  IT_038_ui_reactivity_e2e.cpp  IT_039_ui_repeater_e2e.cpp  IT_040_ui_if_e2e.cpp  IT_041_ui_vlist_e2e.cpp  IT_042_ui_vlist_idlegate_e2e.cpp  IT_043_ui_full_demo_e2e.cpp  IT_044_ui_ship_inspector_e2e.cpp  IT_045_ui_window_resize_smart_e2e.cpp  IT_046_ui_resources_fold_scroll_e2e.cpp  IT_047_ui_fleet_drawer_e2e.cpp  IT_048_ui_vessel_open_inspector_e2e.cpp  IT_049_ui_bound_tooltip_e2e.cpp  (+61 more)
tests/mocks/: MockRHIDevice.h  MockSoundBackend.h  MockVideoBackend.h
tests/modules/: BaseModule.cpp  BaseModule.h  BatchModule.cpp  BatchModule.h  BroadcastModule.cpp  BroadcastModule.h  ChaosModule.cpp  ChaosModule.h  ConfigWatcherModule.cpp  ConfigWatcherModule.h  ConfigurableModule.cpp  ConfigurableModule.h  ConsumerModule.cpp  ConsumerModule.h  DependentModule.cpp  DependentModule.h  EconomyModule.cpp  EconomyModule.h  ErrorRecoveryModule.cpp  ErrorRecoveryModule.h  GameLogicModuleV1.h  GameLogicModuleV2.cpp  GameLogicModuleV2.cpp.bak  GameLogicModuleV2.h  GameLogicModuleV3.cpp  GameLogicModuleV3.h  HeavyStateModule.cpp  HeavyStateModule.h  IOStressModule.cpp  IOStressModule.h  IndependentModule.cpp  IndependentModule.h  LeakTestModule.cpp  MetricsModule.cpp  MetricsModule.h  PlayerModule.cpp  PlayerModule.h  ProducerModule.cpp  ProducerModule.h  StressModule.cpp  (+6 more)
tests/regression/: test_doc_examples.cpp  test_iio_perf_gate.cpp  test_leak_gate.cpp
tests/tools/: worldcheck.cpp
tests/unit/: test_access_guard.cpp  test_action_map.cpp  test_animation_player.cpp  test_asset_async.cpp  test_asset_async_gpu.cpp  test_asset_async_module_gpu.cpp  test_asset_manager.cpp  test_asset_provider_gpu.cpp  test_asset_sprite_gpu.cpp  test_asset_topics_gpu.cpp  test_atlas_packer_gpu.cpp  test_atlas_slice.cpp  test_bitmap_font.cpp  test_build_config.cpp  test_camera.cpp  test_clip.cpp  test_crash_context.cpp  test_crash_handler_mock.cpp  test_debug_pass.cpp  test_dialogue_runtime.cpp  test_easing.cpp  test_engine_clock.cpp  test_entity_world.cpp  test_ffmpeg_backend.cpp  test_flipbook.cpp  test_frame_allocator.cpp  test_fx_world.cpp  test_hud_view.cpp  test_input_module.cpp  test_jsonnode_memtrack.cpp  test_lamport_clock.cpp  test_lod_color.cpp  test_mapview_adapter.cpp  test_mapview_bake.cpp  test_mapview_compress.cpp  test_mapview_core.cpp  test_mapview_disk.cpp  test_mapview_format.cpp  test_mapview_hardening.cpp  test_mapview_hillshade.cpp  (+41 more)
tests/visual/: MapViewBiomes.h  MapViewDemoScene.h  MapViewHud.h  MapViewHypsometry.h  MapViewPoster.h  MapViewViewerApp.h  PngCapture.h  README_FULL_STACK.md  SdlNativeHandle.cpp  SdlNativeHandle.h  TerrainTileset.h  benchmark_render_savage.cpp  capture_async_stream.cpp  capture_mapview.cpp  capture_mapview_from_disk.cpp  capture_mapview_tiles.cpp  capture_ship_inspector.cpp  capture_ui_demo.cpp  capture_ui_on_engine.cpp  capture_vessel_screen.cpp  test_23_bgfx_sprites_visual.cpp  test_24_ui_basic.cpp  test_25_ui_layout.cpp  test_26_ui_buttons.cpp  test_28_ui_scroll.cpp  test_29_ui_advanced.cpp  test_30_input_module.cpp  test_3buttons_minimal.cpp  test_adaptive_demo.cpp  test_async_stream_demo.cpp  test_bgfx_device_only.cpp  test_bgfx_minimal_win.cpp  test_bgfx_sprites.cpp  (+38 more)
(+373 files in other folders)
